Keep object files for debuggers

--- a/libraries/GROOT/makefile
+++ b/libraries/GROOT/makefile
@@ -25,7 +25,7 @@ CAT=cat
 
 .PHONY: all clean gone
 
-all: libGROOT.so
+all: libGROOT.so $(OBJECTS)
 	@printf "\r ${FIN_COLOR}%s${FIN_OBJ_COLOR}%-30s ${NO_COLOR}\n" $(FIN_STRING) $^ ;
 
 %.so: $(OBJECTS)
