--- a/libraries/TGRSIAnalysis/TGRSIDetector/makefile
+++ b/libraries/TGRSIAnalysis/TGRSIDetector/makefile
@@ -15,7 +15,7 @@ CAT=cat
 
 .PHONY: all clean gone
 
-all: libGRSIDetector.so
+all: libGRSIDetector.so $(OBJECTS)
 	@printf "\r ${FIN_COLOR}%s${FIN_OBJ_COLOR}%-30s ${NO_COLOR}\n" $(FIN_STRING) $^ ;
 
 
