--- a/libraries/TDataParser/makefile
+++ b/libraries/TDataParser/makefile
@@ -10,7 +10,7 @@ CAT=cat
 
 .PHONY: all clean gone
 
-all: libDataParser.so
+all: libDataParser.so $(OBJECTS)
 	@printf "\r ${FIN_COLOR}%s${FIN_OBJ_COLOR}%-30s ${NO_COLOR}\n" $(FIN_STRING) $^ ;
 
 
