--- a/libraries/TGRSIAnalysis/TDescant/makefile
+++ b/libraries/TGRSIAnalysis/TDescant/makefile
@@ -13,7 +13,7 @@ CAT=cat
 
 .PHONY: all clean gone
 
-all: libDescant.so
+all: libDescant.so $(OBJECTS)
 	@printf "\r ${FIN_COLOR}%s${FIN_OBJ_COLOR}%-30s ${NO_COLOR}\n" $(FIN_STRING) $^ ;
 
 
