--- a/libraries/TGRSIAnalysis/TNucleus/makefile
+++ b/libraries/TGRSIAnalysis/TNucleus/makefile
@@ -10,7 +10,7 @@ CAT=cat
 
 .PHONY: all clean gone
 
-all: libNucleus.so
+all: libNucleus.so $(OBJECTS)
 	@printf "\r ${FIN_COLOR}%s${FIN_OBJ_COLOR}%-30s ${NO_COLOR}\n" $(FIN_STRING) $^ ;
 
 
