--- a/libraries/TGRSIAnalysis/TSRIM/makefile
+++ b/libraries/TGRSIAnalysis/TSRIM/makefile
@@ -12,7 +12,7 @@ CAT=cat
 
 
 
-all: libSRIM.so
+all: libSRIM.so $(OBJECTS)
 	@printf "\r ${FIN_COLOR}%s${FIN_OBJ_COLOR}%-30s ${NO_COLOR}\n" $(FIN_STRING) $^ ;
 
 
