--- a/libraries/TGRSIAnalysis/TSharc/makefile
+++ b/libraries/TGRSIAnalysis/TSharc/makefile
@@ -15,7 +15,7 @@ CAT=cat
 
 
 
-all: libSharc.so
+all: libSharc.so $(OBJECTS)
 	@printf "\r ${FIN_COLOR}%s${FIN_OBJ_COLOR}%-30s ${NO_COLOR}\n" $(FIN_STRING) $^ ;
 
 
