--- a/libraries/TGRSIAnalysis/TTip/makefile
+++ b/libraries/TGRSIAnalysis/TTip/makefile
@@ -12,7 +12,7 @@ CAT=cat
 
 .PHONY: all clean gone
 
-all: libTip.so
+all: libTip.so $(OBJECTS)
 	@printf "\r ${FIN_COLOR}%s${FIN_OBJ_COLOR}%-30s ${NO_COLOR}\n" $(FIN_STRING) $^ ;
 
 
