--- a/libraries/TGRSIAnalysis/TTriFoil/makefile
+++ b/libraries/TGRSIAnalysis/TTriFoil/makefile
@@ -13,9 +13,7 @@ CAT=cat
 
 .PHONY: all clean gone
 
-
-
-all: libTriFoil.so
+all: libTriFoil.so $(OBJECTS)
 	@printf "\r ${FIN_COLOR}%s${FIN_OBJ_COLOR}%-30s ${NO_COLOR}\n" $(FIN_STRING) $^ ;
 
 
