--- a/libraries/TGRSIServer/makefile
+++ b/libraries/TGRSIServer/makefile
@@ -11,7 +11,7 @@ CAT=cat
 
 .PHONY: all clean gone
 
-all: libTGRSIServer.so
+all: libTGRSIServer.so $(OBJECTS)
 	@printf "\r ${FIN_COLOR}%s${FIN_OBJ_COLOR}%-30s ${NO_COLOR}\n" $(FIN_STRING) $^ ;
 
 libTGRSIServer.so: $(OBJECTS)
