--- a/libraries/TGRSIint/makefile
+++ b/libraries/TGRSIint/makefile
@@ -18,7 +18,7 @@ CAT=cat
 
 .PHONY: all clean gone
 
-all: libTGRSIint.so
+all: libTGRSIint.so $(OBJECTS)
 	@printf "\r ${FIN_COLOR}%s${FIN_OBJ_COLOR}%-30s ${NO_COLOR}\n" $(FIN_STRING) $^ ;
 
 
