--- a/libraries/TGRSIAnalysis/TGRSIFit/makefile
+++ b/libraries/TGRSIAnalysis/TGRSIFit/makefile
@@ -11,8 +11,7 @@ CAT=cat
 .PHONY: all clean gone
 
 all: libTGRSIFit.so $(OBJECTS)
-	@printf "\r ${FIN_COLOR}%s${FIN_OBJ_COLOR}%-30s ${NO_COLOR}\n" $(FIN_STRING) $^ ;
-
+	@printf "\r ${FIN_COLOR}%s${FIN_OBJ_COLOR}%-30s ${NO_COLOR}\n" $(FIN_STRING) $< ;
 
 %.so: $(OBJECTS)
 	@printf " ${COM_COLOR}%s${OBJ_COLOR}%s${NO_COLOR}" $(COMP_STRING) "$@"
