--- a/libraries/TGRSIFormat/makefile
+++ b/libraries/TGRSIFormat/makefile
@@ -16,7 +16,7 @@ CAT=cat
 .PHONY: all clean gone
 
 all: libGRSIFormat.so $(OBJECTS)
-	@printf "\r ${FIN_COLOR}%s${FIN_OBJ_COLOR}%-30s ${NO_COLOR}\n" $(FIN_STRING) $^ ;
+	@printf "\r ${FIN_COLOR}%s${FIN_OBJ_COLOR}%-30s ${NO_COLOR}\n" $(FIN_STRING) $< ;
 
 USERDEPS = $(BASE)/users/UserInitObj.h $(BASE)/users/UserFillObj.h
 
