--- a/libraries/TGRSIint/makefile
+++ b/libraries/TGRSIint/makefile
@@ -19,8 +19,7 @@ CAT=cat
 .PHONY: all clean gone
 
 all: libTGRSIint.so $(OBJECTS)
-	@printf "\r ${FIN_COLOR}%s${FIN_OBJ_COLOR}%-30s ${NO_COLOR}\n" $(FIN_STRING) $^ ;
-
+	@printf "\r ${FIN_COLOR}%s${FIN_OBJ_COLOR}%-30s ${NO_COLOR}\n" $(FIN_STRING) $< ;
 
 libTGRSIint.so: $(OBJECTS)
 	@printf " ${COM_COLOR}%s${OBJ_COLOR}%s${NO_COLOR}" $(COMP_STRING) "$@"
