TRF class and phase/time finder added.

--- a/src/makefile
+++ b/src/makefile
@@ -47,7 +47,7 @@ LIBS += -lTGRSIFit
 DETLIBS =  -lTigress
 DETLIBS += -lSharc
 DETLIBS += -lTriFoil
-#DETLIBS += -lRf
+DETLIBS += -lRF
 DETLIBS += -lCSM
 #DETLIBS += -lSpice
 #DETLIBS += -lS3
