Added Tip to the code - Needs to be tested with TIP data. Currently Compiles and looks good

--- a/libraries/TGRSIAnalysis/makefile
+++ b/libraries/TGRSIAnalysis/makefile
@@ -1,4 +1,4 @@
-SUBDIRS = TGRSIDetector TGriffin TSceptar TDescant TPaces TTigress #TTip  TSharc TTriFoil TCSM 
+SUBDIRS = TGRSIDetector TGriffin TSceptar TDescant TPaces TTigress TTip # TSharc TTriFoil TCSM 
 SUBDIRS += TNucleus TKinematics TSRIM TBetaDecay TAnalysisTreeBuilder TCal TGRSIFit
 ALLDIRS = $(SUBDIRS)
 
