Added TSharc and TSharcHit - Due to complicated structure, Sharc has all of the old data members plus TGRSIDetectorHit members. Some of these are likely redundant.

--- a/src/makefile
+++ b/src/makefile
@@ -45,13 +45,13 @@ LIBS += -lTCal
 LIBS += -lTGRSIFit
 
 DETLIBS =  -lTigress
-#DETLIBS += -lSharc
+DETLIBS += -lSharc
 #DETLIBS += -lTriFoil
 ##DETLIBS += -lRf
 #DETLIBS += -lCSM
 ##DETLIBS += -lSpice
 ##DETLIBS += -lS3
-#DETLIBS += -lTip
+DETLIBS += -lTip
 
 DETLIBS += -lGriffin
 DETLIBS += -lSceptar
