Made code root 6 compatible (tested with root 6.04.00 and 5.34.24) - removed TGRSIFit constructors that use void* - changed TBrowserPlugin class to GBrowserPlugin class - added missing std:: - added preprocessor variable MAJOR_ROOT_VERSION (automatically determined in master makefile) and use this to suppress TClass::IgnoreTObjectStreamer for root 6   this increases the file size a bit, but removes an error message that floods the terminal otherwise
unrelated:
- changed Long_t to Int_t for cfd values in TGriffinData and TPacesData

--- a/libraries/TGRSIAnalysis/TGRSIFit/makefile
+++ b/libraries/TGRSIAnalysis/TGRSIFit/makefile
@@ -45,7 +45,7 @@ all: libTGRSIFit.so $(OBJECTS)
 
 %Dict.cxx: $(BASE)/include/%.h
 	@printf " ${COM_COLOR}%s${DICT_COLOR}%s${NO_COLOR}" $(COMP_STRING) $@
-	@rootcint -f $@ -c $^ 2> temp.log || touch temp.errors
+	@rootcint -f $@ -c -p -DMAJOR_ROOT_VERSION=${MAJOR_ROOT_VERSION} $^ 2> temp.log || touch temp.errors
 	@if test -e temp.errors; then \
 		printf "\r ${COM_COLOR}%s${DICT_COLOR}%-30s ${ERROR_COLOR}%*s${NO_COLOR}\n" $(COMP_STRING) $@ 10 $(ERROR_STRING) \
 		&& $(CAT) temp.log && \
