changed makefiles to use common rules from make.rules, and added dependency check

--- a/libraries/TGint/makefile
+++ b/libraries/TGint/makefile
@@ -1,55 +1,19 @@
 
 OBJECTS = TGint.o TGintDict.o 
+NAME = TGint
 
-CFLAGS += -fPIC
+-include ../../make.rules
 
-COMP_STRING=-n "\033[0;34m Now Compling \033[0;36m$< \033[0m"
-DICT_STRING=-n "\033[0;34m Now Make Dict for \033[0;36m$< \033[0m"
-
-CAT=cat
-
-.PHONY: all clean gone
-
-all: libTGint.so $(OBJECTS)
-	@printf "\r ${FIN_COLOR}%s${FIN_OBJ_COLOR}%-30s ${NO_COLOR}\n" $(FIN_STRING) $< ;
-
-libTGint.so: $(OBJECTS)
-	@$(ECHO) $(COMP_STRING)
-	@$(COMPILESHARED)$@ $(CFLAGS) -olibTGint.so $(OBJECTS) words.o  2> temp.log || touch temp.errors
-	@if test -e temp.errors; then $(ECHO) $(ERROR_STRING) && $(CAT) temp.log && \
-	 $(ECHO) "\033[0;31m from $^ in ${PWD} \033[m"; \
-	 elif test -s temp.log; then $(ECHO) $(WARN_STRING) && $(CAT) temp.log; \
-	 else $(ECHO) $(OK_STRING); \
-	 fi;
-	@$(RM) -f temp.errors temp.log
-	@cp libTGint.so ..
-
-
-
-%.o: %.cxx
-	@$(ECHO) $(COMP_STRING)
-	@$(CXX) -c $^ $(CFLAGS) $(CPPFLAGS) 2> temp.log || touch temp.errors
-	@if test -e temp.errors; then $(ECHO) $(ERROR_STRING) && $(CAT) temp.log && \
-	 $(ECHO) "\033[0;31m from $^ in ${PWD} \033[m"; \
-	 elif test -s temp.log; then $(ECHO) $(WARN_STRING) && $(CAT) temp.log; \
-	 else $(ECHO) $(OK_STRING); \
-	 fi;
-	@$(RM) -f temp.errors temp.log
-
-%Dict.cxx: $(BASE)/include/%.h
-	@$(ECHO) $(DICT_STRING)
+%Dict.cxx: $(INCDIR)/%.h
+	@printf " ${COM_COLOR}%s${DICT_COLOR}%s${NO_COLOR}" $(DICT_STRING) $@
 	@rootcint -f $@ -c -p -DMAJOR_ROOT_VERSION=${MAJOR_ROOT_VERSION} $^ 2> temp.log || touch temp.errors
-	@if test -e temp.errors; then $(ECHO) $(ERROR_STRING) && $(CAT) temp.log && \
-		$(ECHO) "\033[0;31m from $^ in ${PWD} \033[m"; \
-		elif test -s temp.log; then $(ECHO) $(WARN_STRING) && $(CAT) temp.log; \
-		else $(ECHO) $(OK_STRING); \
+	@if test -e temp.errors; then \
+		printf "\r ${COM_COLOR}%s${DICT_COLOR}%-30s ${ERROR_COLOR}%*s${NO_COLOR}\n" $(COMP_STRING) $@ 10 $(ERROR_STRING) \
+		&& $(CAT) temp.log && \
+		printf "${ERROR_COLOR}%s\n${NO_COLOR}" ${PWD};  \
+		elif test -s temp.log; then \
+		printf "\r ${COM_COLOR}%s${DICT_COLOR}%-30s ${WARN_COLOR}%*s${NO_COLOR}\n" $(COMP_STRING) $@ 10 $(WARN_STRING) \
+		&& $(CAT) temp.log; \
+		else printf "\r ${COM_COLOR}%s${DICT_COLOR}%-30s ${OK_COLOR}%*s${NO_COLOR}\n" $(COMP_STRING) $@ 10  $(OK_STRING); \
 		fi;
 	@$(RM) -f temp.errors temp.log
-
-
-
-clean:
-	$(RM) $(OBJECTS) *~ *Dict* 
-
-
-
