--- a/util/makefile
+++ b/util/makefile
@@ -64,7 +64,7 @@ end: $(addprefix $(BINDIR)/,$(CXXTARGET) $(ROOTTARGET))
 
 $(BINDIR)/%: %.cxx
 	@printf " ${COM_COLOR}%s ${OBJ_COLOR}%s${NO_COLOR}" $(COMP_STRING) $(basename $^) 
-	@$(CXX) $^ $(CFLAGS) $(CPPFLAGS) -o$@ 2> temp.log || touch temp.errors
+	@$(CXX) $^ $(CFLAGS) $(CPPFLAGS) $(UTILFLAGS) -o$@ 2> temp.log || touch temp.errors
 	@if test -e temp.errors; then \
 		printf "\r ${COM_COLOR}%s${OBJ_COLOR}%-30s ${ERROR_COLOR}%*s${NO_COLOR}\n" $(COMP_STRING) $(basename $^) 10 $(ERROR_STRING) \
 		&& $(CAT) temp.log && \
