--- a/.grsirc
+++ b/.grsirc
@@ -1,4 +1,4 @@
-Unix.*.Root.MacroPath: .:$(GRSISYS)/util:$(ROOTSYS)/macros
+Unix.*.Root.MacroPath: .:$(GRSISYS)/util:$(ROOTSYS)/macros:$(GRSISYS)/scripts:$(GRSISYS)/examples:$(GRSISYS)/myanalysis
 #Unix.*.Root.DynamicPath:  .:~/rootlibs:$(ROOTSYS)/lib:$/home/tiguser/packages/SharcAnalysis
 
 
