Added TDetector class to generalize all types of detectors.

--- a/src/makefile
+++ b/src/makefile
@@ -63,6 +63,7 @@ DETLIBS += -lPaces
 ##DETLIBS += -lZeroDegree
 DETLIBS += -lDescant
 DETLIBS += -lGRSIDetector
+DETLIBS += -lDetector
 
 DETLIBS += -lGROOT
 
