--- a/libraries/TGRSIAnalysis/makefile
+++ b/libraries/TGRSIAnalysis/makefile
@@ -1,4 +1,4 @@
-SUBDIRS = TGRSIDetector TGriffin TSceptar TDescant TPaces TTigress TTip TSharc TTriFoil # TCSM 
+SUBDIRS = TDetector TGRSIDetector TGriffin TSceptar TDescant TPaces TTigress TTip TSharc TTriFoil # TCSM 
 SUBDIRS += TNucleus TKinematics TSRIM TBetaDecay TAnalysisTreeBuilder TCal TGRSIFit
 ALLDIRS = $(SUBDIRS)
 
