--- a/.grsirc
+++ b/.grsirc
@@ -7,7 +7,7 @@ Rint.Logon: $(GRSISYS)/grsi_logon.C
 Rint.History $(GRSISYS)/.grsi_history
 Rint.HistSize: 1000000 
 
-Rint.PromptColor: #CCCC00
+Rint.PromptColor: %CCCC00
 Rint.BracketColor: bold green
 Rint.BadBracketColor: bold red underlined
 Rint.TabComColor: magenta
