--- a/.github/workflows/cmake-multi-platform.yml
+++ b/.github/workflows/cmake-multi-platform.yml
@@ -50,6 +50,8 @@ jobs:
 
     - name: Install ROOT
       run: |
+        sudo apt-get install binutils cmake dpkg-dev g++ gcc libssl-dev git libx11-dev libxext-dev libxft-dev libxpm-dev python3
+        sudo apt-get install gfortran libpcre3-dev xlibmesa-glu-dev libglew-dev libftgl-dev libmysqlclient-dev libfftw3-dev libcfitsio-dev graphviz-dev libavahi-compat-libdnssd-dev libldap2-dev python3-dev python3-numpy libxml2-dev libkrb5-dev libgsl0-dev qtwebengine5-dev nlohmann-json3-dev
         wget https://root.cern/download/root_v${{matrix.config.root}}.source.tar.gz
         tar -xzf root_v${{matrix.config.root}}.source.tar.gz
         cmake -S root-${{matrix.config.root}} -B root_v${{matrix.config.root}} -Dall=ON -Dcuda=OFF -Dclad=OFF
