--- a/.github/workflows/cmake-multi-platform.yml
+++ b/.github/workflows/cmake-multi-platform.yml
@@ -47,15 +47,24 @@ jobs:
       shell: bash
       run: |
         echo "build-output-dir=${{ github.workspace }}/build" >> "$GITHUB_OUTPUT"
-
+        
+    - name: Setup MacPorts
+      uses: melusina-org/setup-macports@v1.1.3
+            
     - name: Install ROOT
       run: |
-        sudo apt-get install binutils cmake dpkg-dev g++ gcc libssl-dev git libx11-dev libxext-dev libxft-dev libxpm-dev python3
-        sudo apt-get install gfortran libpcre3-dev xlibmesa-glu-dev libglew-dev libftgl-dev libmysqlclient-dev libfftw3-dev libcfitsio-dev graphviz-dev libavahi-compat-libdnssd-dev libldap2-dev python3-dev python3-numpy libxml2-dev libkrb5-dev libgsl0-dev qtwebengine5-dev nlohmann-json3-dev
-        wget https://root.cern/download/root_v${{matrix.config.root}}.source.tar.gz
-        tar -xzf root_v${{matrix.config.root}}.source.tar.gz
-        cmake -S root-${{matrix.config.root}} -B root_v${{matrix.config.root}} -Dall=ON -Dcuda=OFF -Dclad=OFF
-        cmake --build root_v${{matrix.config.root}}
+        if [ "$RUNNER_OS" == "Linux" ]; then
+          sudo apt-get install binutils cmake dpkg-dev g++ gcc libssl-dev git libx11-dev libxext-dev libxft-dev libxpm-dev python3
+          sudo apt-get install gfortran libpcre3-dev xlibmesa-glu-dev libglew-dev libftgl-dev libmysqlclient-dev libfftw3-dev libcfitsio-dev graphviz-dev libavahi-compat-libdnssd-dev libldap2-dev python3-dev python3-numpy libxml2-dev libkrb5-dev libgsl0-dev qtwebengine5-dev nlohmann-json3-dev
+          wget https://root.cern/download/root_v${{matrix.config.root}}.source.tar.gz
+          tar -xzf root_v${{matrix.config.root}}.source.tar.gz
+          echo "Running cmake -S root-${{matrix.config.root}} -B root_v${{matrix.config.root}} -Dall=ON -Dcuda=OFF -Dclad=OFF"
+          cmake -S root-${{matrix.config.root}} -B root_v${{matrix.config.root}} -Dall=ON -Dcuda=OFF -Dclad=OFF
+          cmake --build root_v${{matrix.config.root}}
+        elif [ "$RUNNER_OS" == "macOS"]; then
+          sudo port install root6
+        fi
+      shell: bash
         
     - name: Configure CMake
       # Configure CMake in a 'build' subdirectory. `CMAKE_BUILD_TYPE` is only required if you are using a single-configuration generator such as make.
