--- a/.github/workflows/cmake-multi-platform.yml
+++ b/.github/workflows/cmake-multi-platform.yml
@@ -49,6 +49,7 @@ jobs:
         echo "build-output-dir=${{ github.workspace }}/build" >> "$GITHUB_OUTPUT"
         
     - name: Setup MacPorts
+      if: ${{ "$RUNNER_OS" == "macOS" }}
       uses: melusina-org/setup-macports@v1.1.3
             
     - name: Install ROOT
