--- a/.github/workflows/cmake-multi-platform.yml
+++ b/.github/workflows/cmake-multi-platform.yml
@@ -2,7 +2,8 @@
 # See: https://github.com/actions/starter-workflows/blob/main/ci/cmake-single-platform.yml
 name: CMake on multiple platforms
 
-on: [workflow_dispatch]
+on: 
+  workflow_dispatch:
   push:
     branches: [ "cmake" ]
   pull_request:
