Added installation of libxpm via homebrew

--- a/.github/workflows/cmake-multi-platform.yml
+++ b/.github/workflows/cmake-multi-platform.yml
@@ -74,6 +74,7 @@ jobs:
         if [ "$RUNNER_OS" == "Linux" ]; then
           cmake --build root_v${{matrix.config.root}}-build -- install -j4
         elif [ "$RUNNER_OS" == "macOS" ]; then
+          brew install libxpm
           brew install root
         fi
       shell: bash
